--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>求个网站你懂的无毒_你懂的网站推荐几个_给个网站你懂得 by youjjzz</title>
+    <title>网站你懂得 by youjjzz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,42 +11,15 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">求个网站你懂的无毒_你懂的网站推荐几个_给个网站你懂得</h1>
+      <h1 class="project-name">网站你懂得</h1>
       <h2 class="project-tagline">求个网站你懂的无毒_你懂的网站推荐几个_给个网站你懂得</h2>
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      <p>这是一个追逐物质享受的时代。社会上的确有人把热爱文学看成是疯子的举动。如果这要算疯子的话，我觉得是一个多么幸福的疯子啊！一个没有爱上文学，或说没有文学细胞的人，是永远体会不到文学的魅力与神奇。文学能陶冶人的情操，热爱文学的人更比别人多了份理想和追求。说他们是疯子，是因为他们在平庸的人吃吃喝喝玩乐范围之外。之所以有文学存在，是因为人类需要理想。如鲁迅言：“文艺是国民精神所发火光，也是引起国民精神前途的灯火。
+此时天已大亮。赵县长凭栏远眺，长江如带，由南向北逶迤而过，江风阵阵，吹得城楼八角的风铃叮当作响。他随风回眸，只见明清两代著名书家题写的“江淮重镇”和“江天一柱”匾额及清末贡生庆元颜所撰的楹联：“披襟向前，快哉此风，那堪称雄，登楼高呼太祖在；凭栏仰望，浩然明月，谁与共醉，隔江招手谪仙来”皆赫然在目，不觉心生悲凉。想当年，朱元璋攻占和州登临斯楼时，是何等畅快的心情：“中原杀气未曾收，江北淮南草木秋。我上镇淮楼一望，满天明月大江流。”而如今，日寇亡我之心不死，常来和县扫荡，人民屡遭强盗蹂躏。
+我所居住的楼房距河岸不足百米，站在客厅望窗外，泃河美景一览无余。日夜流淌的泃河不紧不慢的从我的眼前流过，阵阵清风送来河水的凉意，潺潺的流水声似优美的琴弦弹拨着动听的乐曲，荡漾着心海的微波，悠哉，美哉。秋风吹拂下的岸柳依依，如仙女的裙裾在飘曳，绿绸般的翩翩舞动，一群小鸟叽叽喳喳的欢叫着从枝头飞过，精灵一样消失在河岸边的蒲草丛中。这时，河面上驶过来一只机动小船，船上飘扬着一面五星红旗，船儿划过翠绸一样的水面，激溅起的浪花在秋日的辉映下闪闪银亮，好像有许多跳起的飞鱼追逐着快速驶过的小船。船儿的机鸣声还清晰在耳畔，河面上犁出的水沟还未抚平，一群野鸭，是的，灰白色的一大群，它们掠过挺拔的白杨树稍，飞落在泃河的河面上，鸣叫声清脆悦耳，欢腾的河面让人目不暇接。
+白驹过隙，弹指一挥间，不知不觉，我已在这座城市生活了十年，还未曾如此认真的去欣赏过它的存在。细细思量，金城江这座三线城市已在发生了翻天覆地的变化。对这座城市最早的记忆是在2002年，我还处于花季雨季的年龄，来到这里读高中。刚从农村来到这座小城，于我而言，一切都显得很陌生，也很新奇；来到这里，我才知道，外面的世界有多精彩，我才明白，山外有山，人外有人，我的梦想也在这里起飞了。现在想起来有些好笑，初来乍到的我，有时上街都会迷路，时常找不到回校的方向，便觉得这座金城真的好大。那些年的青葱岁月，我懵懵懂懂，跌跌撞撞，未来遥远得没有形状，我们单纯得没有烦恼。也许，成长的过程是一个破茧成蝶的过程。几年以后，到外地念完大学，再次回到这里，年少的轻狂、白日放歌、纵意，随着经过世间的坎坷而克制，温润、收敛。不再向似水流年索取，而是向光阴贡献渐次低温的心。那些稍纵即逝的美都被记得，那些暴烈的邪恶渐次被遗忘。与生活化干戈为玉帛，任意东西，风烟俱净，不问因果。而这座金城，在我眼里也跟着变小了，却也变得更加精致了。( </p>
 
       <footer class="site-footer">
 
