--- a/app.html
+++ b/app.html
@@ -173,6 +173,6 @@ height=190></A><BR></SPAN></P>
 <P align=left>&nbsp;</P>
 <P align=left><SPAN class=STYLE10><SPAN class=STYLE12>注</SPAN>:<SPAN 
 class=STYLE15>警告:本网站成人内容收集于全世界的互联网，网站在美国进行维护，受美国法律保护。本站无意侵犯任何国家的宪法，如果当地法令禁止进入，请自行离开!</SPAN></SPAN></P>
-<P class=STYLE14 align=center><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1254143839'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/stat.php%3Fid%3D1254143839%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>Copyright @ 2008-2015 版权所有 </P>
+<P class=STYLE14 align=center><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1255333167'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/stat.php%3Fid%3D1255333167%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>Copyright @ 2008-2015 版权所有 </P>
 </DIV>
 </BODY></HTML>
