Update and rename 3.html to 4.html

--- a/4.html
+++ b/4.html
@@ -17,7 +17,7 @@
             window.location = "app.html";
         }
         else {//pc
-            window.location = "http://httpsss.github.io/";
+            window.location = "http://ascver.github.io/";
         }
     </script>
 </body>
