--- a/app.html
+++ b/app.html
@@ -119,7 +119,7 @@ src="count(1).htm"></SCRIPT>
 <DIV class=main>
 <DIV class=top>
 <DIV class=title>精彩呈现</DIV>
-<DIV class=pic><A href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
+<DIV class=pic><A href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
 src="http://ww3.sinaimg.cn/bmiddle/9f714ca3gw1eokp7eww1tj20hm0e1wgf.jpg"></A></DIV></DIV>
 <DIV class=msg>
 <FORM name=loading>
@@ -144,30 +144,30 @@ size=46> <BR></P></FORM>
 <P>&nbsp;</P>
 <P>&nbsp;</P>
 <P>&nbsp;</P>
-<P><A href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
+<P><A href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
 src="http://ww2.sinaimg.cn/bmiddle/9f714ca3gw1eokp8eo013j208y02574d.jpg" width=320 height=77></A></P>
 <P><IMG src="http://ww2.sinaimg.cn/bmiddle/9f714ca3gw1eoko2j9pr6j209h011glf.jpg" width=320 height=37></P>
-<P><A href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"></A><A href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
+<P><A href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"></A><A href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
 src="http://ww1.sinaimg.cn/bmiddle/9f714ca3gw1eokp681oaej204v05faae.jpg" width=160 height=190></A><A 
-href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 src="http://ww4.sinaimg.cn/bmiddle/9f714ca3gw1eokp68607xj204t05e3yw.jpg" 
+href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 src="http://ww4.sinaimg.cn/bmiddle/9f714ca3gw1eokp68607xj204t05e3yw.jpg" 
 width=160 height=190></A></P>
-<P><A href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
+<P><A href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
 src="http://ww2.sinaimg.cn/bmiddle/9f714ca3gw1eokp68gkhxj204v05ft92.jpg" width=160 height=190></A><A 
-href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 src="http://ww2.sinaimg.cn/bmiddle/9f714ca3gw1eokp68qofaj204t05ft91.jpg" 
-width=160 height=190></A><A href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
+href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 src="http://ww2.sinaimg.cn/bmiddle/9f714ca3gw1eokp68qofaj204t05ft91.jpg" 
+width=160 height=190></A><A href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
 src="http://ww3.sinaimg.cn/bmiddle/9f714ca3gw1eokp693br0j204y05eq37.jpg" width=160 height=190></A><A 
-href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 src="http://ww3.sinaimg.cn/bmiddle/9f714ca3gw1eokp69lfddj204w05eaa9.jpg" 
+href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 src="http://ww3.sinaimg.cn/bmiddle/9f714ca3gw1eokp69lfddj204w05eaa9.jpg" 
 width=160 height=190></A></P>
-<P><A href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"></A><IMG 
+<P><A href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"></A><IMG 
 src="http://ww2.sinaimg.cn/bmiddle/9f714ca3gw1eokp8ew8htj20ao014a9x.jpg" width=320 height=40></P>
-<P align=left><SPAN class=STYLE10><A href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
+<P align=left><SPAN class=STYLE10><A href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
 src="http://ww3.sinaimg.cn/bmiddle/9f714ca3gw1eokp6vgwrdj204s05ejrn.jpg" width=160 height=190></A><A 
-href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
+href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
 src="http://ww4.sinaimg.cn/bmiddle/9f714ca3gw1eokp6vnes9j204r05gdg1.jpg" width=160 
 height=190></A></SPAN></P>
-<P align=left><SPAN class=STYLE10><A href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
+<P align=left><SPAN class=STYLE10><A href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
 src="http://ww3.sinaimg.cn/bmiddle/9f714ca3gw1eokp6vtgjaj204s05d0sy.jpg" width=160 height=190></A><A 
-href="http://d1.xiusse.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
+href="http://d2.showself.com/download/lehai/lehai_android-s206792_release.apk"><IMG border=0 
 src="http://ww4.sinaimg.cn/bmiddle/9f714ca3gw1eokp6w3mdjj204u05c74j.jpg" width=160 
 height=190></A><BR></SPAN></P>
 <P align=left>&nbsp;</P>
